deploy/manifests/saas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saas
spec:
  selector:
    app: saas
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
