deploy/manifests/saas/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saas
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: saas-redirect-https@kubernetescrd
spec:
  rules:
    - host: sim-policy-trainer-challenge.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: saas
                port:
                  number: 80
  tls:
    - hosts:
        - sim-policy-trainer-challenge.info
      secretName: saas-tls
